Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8203813/WrongReceiverTest.out
WrongReceiverTest.java:10:35: compiler.err.wrong.receiver
1 error
